# notebook_repo

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs-deploy.yaml
Built_ins/Pathlib_/: desafio.py  file_.py  glob_.py  path_.py
Built_ins/Pathlib_/desafios/: desafio_1.py  desafio_2.py  desafio_3.py  desafio_4.py
Built_ins/argparse_e_configparse/: argparse_example.py  configparser_example.py  example.ini
Built_ins/asyncio_/: exemplo_IO_de_rede.py  exemplo_gather.py  gerenciador_de_contexto_assincrono.py  iterador_assincrono.py  tornar_awaitable.py
Built_ins/collections_/: Counter_.py  chainmap_.py  defaultdict_.py  deque_.py  namedtuple_.py  ordereddict_.py
Built_ins/dataclass_/: argumentos_decorador.py  conversao_e_desempacotamento.py  dc_basic_example.py  field_example.py  kw_only_example.py  post_init_example.py
Built_ins/dates_and_times/: calendar_example.py  date_example.py  datetime_example.py  datetime_to_string.py  fuso_example.py  time_example.py  timedelta_example.py  timeit_example.py
Built_ins/email_and_smtplib/: anexo_email.py  basic_email.py  html_email.py  smtplib_basic_usage.py  test.txt
Built_ins/enums/: enum_basic.py  other_examples.py
Built_ins/functools_/: cache_.py  dispatch.py  partial_.py  reduce_.py  total_ordering_.py  wraps_.py
Built_ins/getpass_/: example.py
Built_ins/importlib_/: __init__.py  imports.py
Built_ins/inspect_/: class_inspect.py  func_inspect.py  namespace_inspect.py
Built_ins/io_/: io_example.py
Built_ins/itertools_/: accumulate_.py  chain_.py  combinatoria_e_permutacao.py  count_.py  cycle_.py  filterfalse_.py  groupby_.py  islice_.py  product_.py  repeat_.py  starmap_.py  takewhile_e_dropwhile.py  tee_.py  texto.txt  zip_longest_.py
Built_ins/json_/: json_encoder.py  json_examples.py
Built_ins/os_/: env_vars.txt  os_env.py  os_permissions.py  os_process.py  os_system_info.py
Built_ins/secrets_/: secrets_example.py  secrets_safe_password.py
Built_ins/shutil_/: advanced.py  basics.py
Built_ins/string_/: str_module_example.py
Built_ins/subprocess_/: basic_example.py  log_search.py  subprocess_interaction.py
Built_ins/sys_/: cli_args.py  recursion_limit.py
Built_ins/tempfile_/: file_security.py  spooled_example.py  tempfile_example.py
Built_ins/threading_/: exemplo_thread.py
Built_ins/urllib_/: basic_example.py  custom_request.py
CEV/Aulas/Mundo1/: Aula10A.py  Aula10B.py  Aula4.py  Aula8C.py
CEV/Aulas/Mundo2/: Aula13.py
CEV/Aulas/Mundo3/: Aula16.py  Aula17.py  Aula18.py
CEV/Exercicios e desafios/Mundo2/: ex043.py  ex044.py  ex045.py  ex045B.py  ex047.py  ex051.py  ex053.py  ex053B.py  ex055.py  ex056.py  ex057.py  ex060.py  ex062.py  ex063.py  ex067.py  ex068.py  ex069.py
CEV/Exercicios e desafios/Mundo3/: ex072.py  ex073.py  ex076.py  ex077.py  ex079.py  ex080.py  ex081.py  ex085.py  ex086.py  ex087.py  ex088B.py  ex089B.py  ex090.py  ex093.py  ex094.py  ex096.py  ex098.py  ex098B.py  ex099.py  ex100.py  ex103.py  ex105.py  ex106.py  ex114.py
CEV/Praticando/CEV/: Praticando10.py  Praticando3.py
CEV/Praticando/Extras/: Praticando1.py  Praticando2.py  Praticando4.py
CI_CD/: exemplo_CD.yaml  exemplo_CI.yaml
Estrutura_de_dados/: binarysearch.py  my_array.py  my_queue.py  pyproject.toml  recursion.py  stack.py  t.py
Estrutura_de_dados/graph/: adjacency_list.py  adjacency_matrix.py  dijkstra.py  eulerian_graph.py
Estrutura_de_dados/hash_table/: HT_alternativa.py  distribuicao_hash.py  my_hash_function.py  my_hashtable.py
Estrutura_de_dados/heap/: heap.py  maxheap.py  minheap.py
Estrutura_de_dados/linked_list/: llist.py
Estrutura_de_dados/sorting/: bubble.py  built-in_sort.py  execution_time.py  insertion.py  merge.py  quick.py  selection.py
Estrutura_de_dados/test/: teste_hashtable.py
Estrutura_de_dados/tree/: avltree.py  binarysearchtree.py  binarytree.py  exemplo_tree.py  nodebt.py  support.py
OOP/: classes_abstratas.py  property_.py
PPZ/: lista2ex7.py  lista3desaex2.py  lista3desaex5.py  lista3ex3.py  lista3ex4.py  lista3ex5.py  lista4ex1.py  lista4ex2.py  lista4ex3.py  lista5ex3.py  lista5ex4.py
api/: index.html
cursos/CEV/: requirements.txt
cursos/CEV/Aulas/Mundo1/: Aula6.py  (+9 more)
cursos/PPZ/: lista2ex3.py  lista2ex6.py  lista3desaex1.py  lista3desaex3.py  lista3desex4.py  lista4ex4.py  lista4ex5.py  lista5ex5.py
descomplicando_docker/compose/1/: docker-compose.yaml
descomplicando_docker/compose/2/: docker-compose.yml
descomplicando_docker/compose/3/: docker-compose.yml
descomplicando_docker/compose/4/: docker-compose.yml
descomplicando_docker/compose/5/: docker-compose.yml
descomplicando_docker/docker_swarm/traefik/: app2_example.yaml  app_example.yaml  traefik_deploy.yaml  traefik_deploy_https.yaml
descomplicando_docker/dockerfiles/2/: Dockerfile
descomplicando_docker/dockerfiles/3/: Dockerfile
descomplicando_docker/dockerfiles/4/: Dockerfile
descomplicando_docker/dockerfiles/5/: Dockerfile
descomplicando_docker/tosko_docker/: Dockerfile
diagrama/: index.html
docs/: api.md  diagrama.md  files.md
docs/guia/: config.md  instrucoes.md
example_docstrings/: somar.py
files/: index.html
guia/config/: index.html
guia/instrucoes/: index.html
linters/: pyproject.toml
livros/pense_em_python/: arquivo.py  db.py  shell.py
nginx/: nginx.conf  proxy.md
pense_em_python/: arquivo.py  path.py  pickle_.py
pre_commit/: pyproject.toml
pre_commit/local/: .pre-commit-config.yaml
pre_commit/online/: .pre-commit-config.yaml
pre_commit_/: pyproject.toml
pre_commit_/local/: .pre-commit-config.yaml
pre_commit_/online/: .pre-commit-config.yaml
qualidade_de_codigo/: pyproject.toml
raspagem_de_dados/: cleaner.py  debug.py  raspagem.py
search/: search_index.json
testes/: manipulacao_de_tempo.py  monkey_patch.py  request_mock.py
utils/: arquivo_zip.py  context_manager.py  manipulacao_csv.py  migracao_em_massa.py  regex_sanitization.py  validation.py
yield/: arquivo.txt  basic_example.py  context_manager.py  coroutine.py  lazzy_file.py  primer.py  sub_generators.py
(+115 files in other folders)
