[tool.poetry]
name = "pre-commit-"
version = "0.1.0"
description = ""
authors = ["guilherme <guilherme-lopes58@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.*"
pre-commit = "3.5.*"
black = "24.3.*"
flake8 = "6.1.*"
ruff = "0.3.*"
mypy = "1.8.*"
commitizen = "3.16.*"
pre-commit-hooks = "4.6.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Instalar hooks: pre-commit install
# Manual: pre-commit run --all-files
